--- a/ReviewDlg.xaml
+++ b/ReviewDlg.xaml
@@ -6,7 +6,8 @@
                xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                mc:Ignorable="d"
-               x:Uid="DlgAbout"
+               x:Uid="DlgReview"
+               DefaultButton="Primary"
                Style="{StaticResource DefaultContentDialogStyle}"
                Background="{ThemeResource AcrylicInAppFillColorDefaultBrush}">
 
