--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -347,7 +347,7 @@
                         <Setter Target="Info.Margin"
                                 Value="24,36,24,24" />
                         <Setter Target="AnchorGo.Margin"
-                                Value="0,0,24,24" />
+                                Value="20,24,20,24" />
                     </VisualState.Setters>
                 </VisualState>
             </VisualStateGroup>
@@ -465,6 +465,8 @@
 
             <RelativePanel Name="ViewBarPointer"
                            Background="Transparent"
+                           RelativePanel.AlignLeftWithPanel="True"
+                           RelativePanel.AlignRightWithPanel="False"
                            RelativePanel.AlignBottomWithPanel="True"
                            PointerEntered="ViewBarPointer_PointerEntered"
                            PointerExited="ViewBarPointer_PointerExited">
@@ -546,6 +548,8 @@
 
             <muxc:InfoBar Name="Info"
                           Background="{ThemeResource AcrylicInAppFillColorDefaultBrush}"
+                          RelativePanel.AlignLeftWithPanel="True"
+                          RelativePanel.AlignRightWithPanel="False"
                           IsOpen="False"
                           Margin="12,36,12,12">
                 <muxc:InfoBar.ActionButton>
@@ -560,7 +564,8 @@
                        Width="0"
                        Height="0"
                        FlyoutBase.AttachedFlyout="{StaticResource FlyoutGo}"
-                       Margin="0,0,12,12"
+                       Margin="10,12,10,12"
+                       RelativePanel.AlignLeftWithPanel="False"
                        RelativePanel.AlignRightWithPanel="True"
                        RelativePanel.AlignBottomWithPanel="True" />
 
