--- a/SettingsView.xaml
+++ b/SettingsView.xaml
@@ -447,6 +447,58 @@
                         </Grid>
                     </muxc:Expander.Content>
                 </muxc:Expander>
+                <muxc:Expander Name="ExpanderOne"
+                               ExpandDirection="Down"
+                               IsExpanded="False"
+                               Tag="one"
+                               Expanding="ExpanderProvider_Expanding"
+                               HorizontalAlignment="Stretch"
+                               HorizontalContentAlignment="Stretch"
+                               Margin="0,8,0,0">
+                    <muxc:Expander.Header>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition Width="*" />
+                            </Grid.ColumnDefinitions>
+                            <StackPanel Grid.Column="1"
+                                        Margin="0,12"
+                                        Orientation="Vertical">
+                                <TextBlock x:Uid="SettingsOneTitle"
+                                           Style="{StaticResource BodyTextBlockStyle}" />
+                                <TextBlock x:Uid="SettingsOneDesc"
+                                           Style="{StaticResource CaptionTextBlockStyle}"
+                                           MaxLines="1"
+                                           Foreground="{ThemeResource TextFillColorSecondaryBrush}"
+                                           TextWrapping="WrapWholeWords" />
+                            </StackPanel>
+                        </Grid>
+                    </muxc:Expander.Header>
+                    <muxc:Expander.Content>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto" />
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="Auto" />
+                            </Grid.ColumnDefinitions>
+                            <FontIcon Margin="0,0,12,0"
+                                      VerticalAlignment="Center"
+                                      Foreground="{ThemeResource TextFillColorPrimaryBrush}"
+                                      FontFamily="{ThemeResource FluentIcons}"
+                                      FontSize="16"
+                                      Glyph="&#xE8CB;" />
+                            <TextBlock Grid.Column="1"
+                                       x:Uid="TextOneOrder"
+                                       VerticalAlignment="Center"
+                                       Style="{StaticResource BodyTextBlockStyle}" />
+                            <ComboBox Name="BoxOneOrder"
+                                      Grid.Column="2"
+                                      MinWidth="140"
+                                      ItemsSource="{x:Bind listOneOrder}"
+                                      SelectionChanged="BoxOneOrder_SelectionChanged" />
+                        </Grid>
+                    </muxc:Expander.Content>
+                </muxc:Expander>
 
                 <TextBlock x:Uid="TextSettingsGeneral"
                            Style="{StaticResource BodyTextBlockStyle}"
